fix spacing?

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
-html, body {
+html, body, canvas {
     width:  100%;
     height: 100%;
     margin: 0;
+    overflow: hidden;
 }
